//
//  Constants.swift
//  Marvel-Demo
//
//  Created by Zain Nadeem on 3/17/20.
//  Copyright © 2020 Zain Nadeem. All rights reserved.

import Foundation
import UIKit

let marvelGrey = UIColor.init(red: 32/255, green: 33/255, blue: 34/255, alpha: 1)
let additionalHeightForDetailContent = CGFloat(5)
let titleFontSize = CGFloat(15)
let descriptionFontSize = CGFloat(13)
let appTitle = "Marvel-Demo"

enum FontWeight : String {
    case light = "Light"
    case medium = "Medium"
    case bold = "Bold"
    case regular = "Thin"
}
